# vending-machine

vending_machine_refactor/: pyproject.toml  requirements.txt  run_gui.bat  run_gui.py
vending_machine_refactor/data/: vending_machine.xlsx  vending_machine_from_legacy.xlsx  vending_machine_gui_demo.xlsx  vending_machine_template.xlsx
vending_machine_refactor/scripts/: bootstrap_workbook.py
vending_machine_refactor/src/vending_machine/app/: service.py
vending_machine_refactor/src/vending_machine/domain/: change.py  models.py
vending_machine_refactor/src/vending_machine/infra/: excel_repository.py  file_lock.py
vending_machine_refactor/src/vending_machine/presentation/: cli.py  pyside_gui.py
vending_machine_refactor/src/vending_machine_refactor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
vending_machine_refactor/tests/: test_purchase.py  test_reports_and_audit.py
